<resources>
    <string name="app_name">Network Assessment</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_network_scan">NetworkScan</string>
    <string name="title_activity_results">Results</string>
    <string name="title_activity_user_awareness">UserAwareness</string>
    <string name="open">Open</string>
    <string name="close">Open</string>
    <string name="nav_results">Results</string>
    <string name="nav_vuln">Vulnerabilities</string>
    <string name="nav_impact_scope">Impact Scope</string>
    <string name="nav_mitigations">Mitigations</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="OperatingSystems">Operating Systems</string>
    <string name="Vulnerabilities">Vulnerabilities</string>
    <string name="ThreatLevels">Threat Levels</string>
    <string name="AttackComplexity">Attack Complexity</string>
    <string name="AdvancedView">Advanced View</string>
    <string name="confidentialityImpact">Confidentiality</string>
    <string name="integrityImpact">Integrity</string>
    <string name="availabilityImpact">Availability</string>
    <string name="VulnerabilityCategories">Vulnerability Categories</string>
    <string name="VulnerableHosts">Vulnerabe Hosts</string>
    <string name="AllVulnerabilities">All Vulnerabilities</string>
    <string name="title_activity_vulnerability_filter_mitigation_type">
        VulnerabilityFilterMitigationType
    </string>
    <string name="AllMitigations">All Mitigations</string>
    <string name="MitigationCategory">Mitigation Categories</string>
    <string name="nav_Security_Awarenes">Security Awareness</string>
    <string name="Security_Awareness">Security Awareness</string>
    <string name="Security_Quiz">Security Quiz</string>
    <string name="Password_Guidance">Passwords</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_web_app_awareness">WebAppAwareness</string>
    <string name="title_activity_phishing_awareness">PhishingAwareness</string>
    <string name="password">password</string>
    <string name="awarenessKey">awarenessPage</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="title_activity_quiz_home">QuizHome</string>
    <string name="title_activity_my_network">MyNetworkActivity</string>

    <string name="device_not_scanned">This device has not been scanned!</string>
    <string name="device_not_scanned_instructions">Click "'"scan device"'" button above to check for vulnerabilities</string>
    <string name="device_previous_vulnerabilities">Vulnerabilities have been found on this device.</string>
    <string name="device_previous_vulnerabilities_instructions">Please see the results section to find detailed information on mitigations, then rerun the scan when they have been applied</string>
    <string name="device_no_vulnerabilities">Well done! No vulnerabilities found on this device</string>
    <string name="device_no_vulnerabilities_instructions">Reminder: It is recommended to search for vulnerabilities at least once a month as new vulnerabilities are discovered every week.</string>
    <string name="Services">Services</string>
    <string name="Devices">Devices</string>
    <string name="ftp_description">"Used for the transfer of files between devices on the network"</string>
    <string name="ssh_description">"Allows secure network communication between devices"</string>

    <string name="telnet_description">"Provides bidirectional interactive text communication betweeen connected devices on the network"</string>
    />
    <string name="smtp_description">"Used for sending and receiving email"</string>
    <string name="domain_description">"The internets equivalent of a phone book. Maintains human readable names that translates to an IP address. Example: Google.com translates to 172.217.12.206 (try this by typing 172.217.12.206 into your web browser)"</string>

    <string name="http_description">"Used by the World Wide Web for sending and receiving website pages"</string>

    <string name="rpcblind_description">"Remove"</string>
    <string name="netbios_ssn_description">"Allows devices to communicate over the network"</string>

    <string name="microsoft_ds_description">"A networking file sharing protocol used in Microsoft Windows"</string>
    <string name="nfs_description">"Allows users to access files from another storage device across the network"</string>

    <string name="mysql_description">"A database management system used for storing data"</string>
    <string name="postgresql_description">"A database management system used for storing data"</string>

    <string name="vnc_description">"Allows control of a computer from another computer on the network"</string>
    <string name="irc_description">"Allows users to chat over communicate in text form"</string>
    <string name="obsolete_operating_systems_detected">Operating Systems that are no longer support have been detected:</string>

    <string name="network_scan_warning">Warning: The default network scan is recommended. Running the quick scan may not detect all network devices and services running.
    This can result in devices being vulnerable to attackers with impacts such as stealing personal information and identity theft. </string>


    <string name="linux_3X_description">"Linux is a computer operating system like Windows. Unlike Windows,
        Linux is open source, meaning that the operating system is free to customise for anyone and therefore
        there are many different distributions available each geared towards a different purpose."</string>

    <string name="linux_2X_description">"Linux is a computer operating system like Windows. Unlike Windows, Linux is open source, meaning that the operating system is free to customise for anyone and therefore there are many different distributions available each geared towards a different purpose."</string>
    <string name="windows_xp_description"><![CDATA["Windows XP operating system should no longer be used as Microsoft ceased support for it in 2014 and therefore it does not receive security updates. <br><br><b>Warning: </b>Running Windows XP means you are at risk to many cyber attacks such as identity theft and malware. Please update as soon as possible. For more information please visit: https://www.getsafeonline.org/software/windows-xp/ ]]>"</string>
    <string name="windows_xp_warning">"This Operating System is obsolete and should be upgraded. Please upgrade as soon as possible. \n\nFor more information please visit: https://www.getsafeonline.org/software/windows-xp " </string>

    <string name="advanced_mode_warning">"Advanced mode is intended for technical users. Using the advanced application scans may impact device functionality on the network. Only use this mode if you have strong knowledge of network scanning tools."</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_network_configuration">NetworkConfiguration</string>
    <string name="title_activity_videos_awareness">VideosAwareness</string>
    <string name="title_activity_about">AboutActivity</string>

</resources>
