<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottomNavNetworkHome"
        android:icon="@drawable/ic_baseline_desktop_windows_24px"
        android:title="@string/Devices"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/bottomNavOperatingSystems"
        android:icon="@mipmap/windows_logo"
        android:title="@string/OperatingSystems"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/bottomNavServices"
        android:icon="@drawable/ic_baseline_import_export_24px"
        android:title="@string/Services"
        app:showAsAction="always|withText" />





</menu>