<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.results.MainNavigationFragments.impact.IntegrityFragment">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/headerLayout"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtImpactTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Impact Scope"
                style="@style/custom_mainbody_heading_centered"
                android:layout_centerInParent="true" />

            <ImageView
                android:id="@+id/impact_integrity_help"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="8px"
                android:onClick="showImpactText"
                android:src="@drawable/question_mark" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:paddingTop="20dp"
            android:textSize="14sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <RadioButton
                android:id="@+id/radio_confidentiality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:paddingRight="5dp"
                android:text="@string/confidentialityImpact" />

            <RadioButton
                android:id="@+id/radio_integrity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:paddingRight="5dp"
                android:text="@string/integrityImpact" />

            <RadioButton
                android:id="@+id/radio_availability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/availabilityImpact" />

        </RadioGroup>
    </LinearLayout>
</FrameLayout>